language/move-lang/tests/move_check/translated_ir_tests/signer/is_resource_write_ref.exp
error: 

   ┌── tests/move_check/translated_ir_tests/signer/is_resource_write_ref.move:3:10 ───
   │
 3 │         *sref = s;
   │          ^^^^ Invalid mutation. Can only assign to references of a copyable type
   ·
 2 │     fun t(sref: &mut signer, s: signer) {
   │                      ------ The type: 'signer'
   ·
 2 │     fun t(sref: &mut signer, s: signer) {
   │                      ------ Is found to be a non-copyable type here
   │

