language/move-lang/tests/move_check/translated_ir_tests/signer/is_resource_write_ref.move
module M {
    fun t(sref: &mut signer, s: signer) {
        *sref = s;
    }
}

// check: WRITEREF_RESOURCE_ERROR
